--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styleDesc.css">
+
+</head>
+
+<body>
+    
+    <div id="container"></div>
+    <button onclick="initializeCards()" type="button" id="button">Load More</button>
+    <script src="script.js"></script>
+
+</body>
+
+</html>
